force-app/main/default/objects/Inventory__c/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chassis</label>
    <referenceTo>Chassis__c</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>