force-app/main/default/objects/Inventory__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>