force-app/main/default/objects/Inventory__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engine</label>
    <referenceTo>Engine__c</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>